log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Thu May 14 08:23:26 PM UTC 2026: 
 graph.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:52:20: error: initialization of ‘Map *’ from incompatible pointer type ‘MapPair *’ [-Wincompatible-pointer-types]
   52 |     Map* map_aux = map_search(g->adjacencyMap, (void*) label1) ;
      |                    ^~~~~~~~~~
graph.c:54:34: error: invalid use of incomplete typedef ‘Map’
   54 |     List *listAdjacency = map_aux->value;
      |                                  ^~
graph.c:58:37: error: passing argument 1 of ‘strcmp’ makes pointer from integer without a cast [-Wint-conversion]
   58 |         if (strcmp(edge_aux->target == label2) == 0)
      |                    ~~~~~~~~~~~~~~~~~^~~~~~~~~
      |                                     |
      |                                     int
In file included from test.c:3:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:32: note: expected ‘const char *’ but argument is of type ‘int’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                    ~~~~~~~~~~~~^~~~
graph.c:58:13: error: too few arguments to function ‘strcmp’
   58 |         if (strcmp(edge_aux->target == label2) == 0)
      |             ^~~~~~
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:12: note: declared here
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
graph.c:66:12: error: returning ‘void *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Wint-conversion]
   66 |     return NULL ;
      |            ^~~~
69bad64
Thu May 14 08:25:03 PM UTC 2026: 
 graph.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:58:37: error: passing argument 1 of ‘strcmp’ makes pointer from integer without a cast [-Wint-conversion]
   58 |         if (strcmp(edge_aux->target == label2) == 0)
      |                    ~~~~~~~~~~~~~~~~~^~~~~~~~~
      |                                     |
      |                                     int
In file included from test.c:3:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:32: note: expected ‘const char *’ but argument is of type ‘int’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                    ~~~~~~~~~~~~^~~~
graph.c:58:13: error: too few arguments to function ‘strcmp’
   58 |         if (strcmp(edge_aux->target == label2) == 0)
      |             ^~~~~~
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:12: note: declared here
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
graph.c:66:12: error: returning ‘void *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Wint-conversion]
   66 |     return NULL ;
      |            ^~~~
bdaa2eb
Thu May 14 08:26:00 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:66:12: error: returning ‘void *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Wint-conversion]
   66 |     return NULL ;
      |            ^~~~
3f0fbfc
Thu May 14 08:26:22 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
========================================
a3605cb
Thu May 14 08:34:08 PM UTC 2026: 
 tests:  1|5
========================================
e6111f8
Fri May 15 06:54:14 PM UTC 2026: 
 graph.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:31:30: error: implicit declaration of function ‘createMap’; did you mean ‘createGraph’? [-Wimplicit-function-declaration]
   31 |     newGraph->adjacencyMap = createMap(is_equal_string) ;
      |                              ^~~~~~~~~
      |                              createGraph
graph.c:31:28: error: assignment to ‘Map *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   31 |     newGraph->adjacencyMap = createMap(is_equal_string) ;
      |                            ^
06ff11d
Fri May 15 06:54:31 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6ac695d
Fri May 15 06:55:27 PM UTC 2026: 
 graph.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
cd17b30
Fri May 15 07:04:43 PM UTC 2026: 
 graph.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:32:27: error: invalid use of incomplete typedef ‘Map’
   32 |     newGraph->adjacencyMap->ls = list_create() ;
      |                           ^~
9912ae8
Fri May 15 07:09:50 PM UTC 2026: 
 graph.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:31:41: error: ‘is_equal’ undeclared (first use in this function)
   31 |     newGraph->adjacencyMap = map_create(is_equal, lower_than) ;
      |                                         ^~~~~~~~
graph.c:31:41: note: each undeclared identifier is reported only once for each function it appears in
graph.c:31:51: error: ‘lower_than’ undeclared (first use in this function)
   31 |     newGraph->adjacencyMap = map_create(is_equal, lower_than) ;
      |                                                   ^~~~~~~~~~
graph.c:31:30: error: too many arguments to function ‘map_create’
   31 |     newGraph->adjacencyMap = map_create(is_equal, lower_than) ;
      |                              ^~~~~~~~~~
In file included from graph.c:8:
map.h:14:6: note: declared here
   14 | Map *map_create(int (*is_equal)(void *key1, void *key2)); // unsorted map
      |      ^~~~~~~~~~
c995dfe
Fri May 15 07:11:44 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1696f38
Fri May 15 07:12:58 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
046a853
Fri May 15 07:16:08 PM UTC 2026: 
 graph.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
1cbeeef
Sat May 16 10:23:12 PM UTC 2026: 
 graph.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|0
350f2d2
